welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:26: error: not found: value c
		c match {
                ^